[package]
name = "lnrecc"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.11.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
cron = "0.12.1"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
tonic_lnd = { git = "https://github.com/pycanis/tonic_lnd", branch = "feat/update-lnd-protos" }
